--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,18 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    
+  <body>    
+    <header class="header">
+      <div class = "main_header">App First</div>
+      <div class = "sub_header">
+        <div class ="left_header">SERVICE</div>
+        <div class ="middle_header">NEWS</div>
+        <div class ="right_header">CONTACT</div>
+      </div>
+    </header>
     <%= yield %>
+    <footer>
+      <div class ="footer_message">Copyright©️2022 TECHCAMP</div>
+    </footer>
   </body>
 </html>
