--- a/app/views/starts/servise.html.erb
+++ b/app/views/starts/servise.html.erb
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class ="servise_main">
-      <div class ="servise_box">
-        <div class ="servise_box_top_p">
-          <div class ="servise_box_top">SERVICE</div>
+    <div class ="service_main">
+      <div class ="service_box">
+        <div class ="service_box_top_p">
+          <div class ="service_box_top">SERVICE</div>
         </div>
-        <div class ="servise_box_bottom_p">
-          <div class ="servise_box_bottom">サービス内容</div>
+        <div class ="service_box_bottom_p">
+          <div class ="service_box_bottom">サービス内容</div>
         </div>
       </div>
 
