ルーティング設定

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,8 @@
     <header class="header">
       <%= link_to "App First", root_path, class: "main_header" %>
       <div class = "sub_header">
-      <%= link_to "SERVICE", service_path, class: "left_header"%>
-        <div class ="middle_header">NEWS</div>
+        <%= link_to "SERVICE", service_path, class: "left_header"%>
+        <%= link_to "NEWS", news_path, class: "middle_header"%>
         <div class ="right_header">CONTACT</div>
       </div>
     </header>
