--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,4 +1,3 @@
-/* ーー　トップページ　ーー */
 /* ---　ヘッダー　--- */
 .header {
   background-color: #DBDBDB;
@@ -39,6 +38,20 @@
   text-decoration: none;
 }
 
+/* ---　フッダー　--- */
+footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 70px;
+}
+
+.footer_message{
+  font-size: 16px;
+  color: #959393;
+}
+
+/* ーー　トップページ　ーー */
 /* ---　メイン　--- */
 .main {
   display: flex;
@@ -88,19 +101,6 @@
 .link_title {
   font-size: 24px;
   font-weight: 600;
-}
-
-/* ---　フッダー　--- */
-footer{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 70px;
-}
-
-.footer_message{
-  font-size: 16px;
-  color: #959393;
 }
 
 /* ーーサービスページーー */
@@ -163,4 +163,124 @@ footer{
   height: 275px;
   width: 350px;
   border-radius: 5px 5px 0 0;
+}
+
+/* ーーニュースページーー */
+.news_main {
+  width: 100vw;
+}
+
+.news_top_p {
+  display: flex;
+  justify-content: center;
+}
+
+.news_top_box {
+  font-size: 64px;
+  font-weight: 600;
+  margin-top: 50px;
+}
+
+.news_top_notice {
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 150px;
+  text-align: center;
+}
+
+.news_bottom {
+  display: flex;
+  justify-content: center;
+  height: 760px;
+}
+
+.news_bot_left {
+  height: 600px;
+  width: 960px;
+}
+
+.news_title {
+  font-size: 36px;
+  font-weight: 600;
+}
+
+.news_detail {
+  font-size: 18px;
+  display: flex;
+}
+
+.news_detail_days {
+  margin: 20px 60px 20px 0;
+}
+
+.news_detail_category{
+  margin: 20px 0;
+}
+
+.news_image{
+  height: 240px;
+  width: 630px;
+}
+
+.news_explain {
+  height: 300px;
+  width: 630px;
+  font-size: 18px;
+  margin-top: 20px;
+  line-height: 1.5;
+}
+
+.news_category {
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.side_box {
+  
+}
+
+.first_box {
+  height: 60px;
+  width: 200px;
+  background-color: #EEEDED;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.news_first {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.second_box  {
+  height: 60px;
+  width: 200px;
+  background-color: #EEEDED;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
+
+}
+
+.news_second {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.third_box {
+  height: 60px;
+  width: 200px;
+  background-color: #EEEDED;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.news_third {
+  font-size: 18px;
+  font-weight: 600;
 }
