--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       <div class = "sub_header">
         <%= link_to "SERVICE", service_path, class: "left_header"%>
         <%= link_to "NEWS", news_path, class: "middle_header"%>
-        <div class ="right_header">CONTACT</div>
+        <%= link_to "CONTAKT", contact_path, class: "right_header"%>
       </div>
     </header>
     <%= yield %>
