--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -236,10 +236,6 @@ footer{
   margin-bottom: 10px;
 }
 
-.side_box {
-  
-}
-
 .first_box {
   height: 60px;
   width: 200px;
@@ -283,4 +279,84 @@ footer{
 .news_third {
   font-size: 18px;
   font-weight: 600;
+}
+
+/* ーーコンタクトページーー */
+.contact_main {
+  width: 100vw;
+}
+
+.contact_top_p {
+display: flex;
+justify-content: center;
+}
+
+.contact_box {
+  font-size: 64px;
+  font-weight: 600;
+  margin-top: 50px;
+}
+
+.contact_notice {
+  font-size: 24px;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 150px;
+}
+
+.contact_bottom {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 180px;
+  font-size: 24px;
+}
+
+.name {
+margin-bottom: 5px;
+}
+
+.name_form {
+  font-size: 20px;
+  height: 60px;
+  width: 650px;
+  border-radius: 10px;
+  border: 2px solid #DEDEDE;
+  padding: 10px;
+  
+}
+
+.address {
+  margin: 25px 0 5px 0;
+}
+
+.address_form {
+  font-size: 20px;
+  height: 60px;
+  width: 650px;
+  border-radius: 10px;
+  border: 2px solid #DEDEDE;
+  padding: 10px;
+}
+
+.inquiry {
+  margin: 25px 0 5px 0;
+}
+
+.inquiry_form {
+  font-size: 20px;
+  height: 160px;
+  width: 650px;
+  border-radius: 10px;
+  border: 2px solid #DEDEDE;
+  padding: 10px;
+  margin-bottom: 40px;
+}
+
+.send {
+  font-size: 24px;
+  height: 50px;
+  width: 100px;
+  border-radius: 10px;
+  color: #ffffff;
+  background-color: #454545;
 }
