--- a/app/views/starts/news.html.erb
+++ b/app/views/starts/news.html.erb
@@ -1,38 +1,35 @@
-    <div class ="news_main">
-      <div class ="news_top_p">
-        <div class ="news_top">
-          <div class ="news_top_box">NEWS</div>
-          <div class ="news_top_notice">お知らせ</div>
-        </div>
+<div class ="news_main">
+  <div class ="news_top_p">
+    <div class ="news_top">
+      <div class ="news_top_box">NEWS</div>
+      <div class ="news_top_notice">お知らせ</div>
+    </div>
+  </div>
+  <div class ="news_bottom">
+    <div class ="news_bot_left">
+      <div class ="news_title">ワークショップ開催のお知らせ</div>
+      <div class ="news_detail">
+        <div class ="news_detail_days">2024年4月1日</div>
+        <div class ="news_detail_category">カテゴリー：お知らせ</div>
       </div>
-      <div class ="news_bottom">
-        <div class ="news_bot_left">
-          <div class ="news_title">ワークショップ開催のお知らせ</div>
-          <div class ="news_detail">
-            <div class ="news_detail_days">2024年4月1日</div>
-            <div class ="news_detail_category">カテゴリー：お知らせ</div>
-          </div>
-          <%=image_tag "work-shop.jpg", class:"news_image"%>
-          <div class ="news_explain">アプリケーションのリリース関心がある方を対象に、「ペーパープロトタイピング体験会」ワークショップを開催します。<br>
-          プロトタイプの作成を通じて、実践的なデザイン思考を学ぶことができます。どうぞ奮ってご参加ください。<br><br>
-          ◯月◯日 19:00〜<br>
-          場所：東京都渋谷区
-          </div>
+      <%=image_tag "work-shop.jpg", class:"news_image"%>
+      <div class ="news_explain">アプリケーションのリリース関心がある方を対象に、「ペーパープロトタイピング体験会」ワークショップを開催します。<br>
+        プロトタイプの作成を通じて、実践的なデザイン思考を学ぶことができます。どうぞ奮ってご参加ください。<br><br>◯月◯日 19:00〜<br>場所：東京都渋谷区
+      </div>
+    </div>
+    <div class ="news_bot_right">
+      <div class ="news_category">カテゴリー</div>
+      <div class ="side_box">
+        <div class ="first_box">
+          <div class ="news_first">お知らせ</div>
         </div>
-        <div class ="news_bot_right">
-          <div class ="news_category">カテゴリー</div>
-          <div class ="side_box">
-            <div class ="first_box">
-              <div class ="news_first">お知らせ</div>
-            </div>
-            <div class ="second_box">
-              <div class ="news_second">プレリリース</div>
-            </div>
-            <div class ="third_box">
-              <div class ="news_third">メディア掲載</div>
-            </div>
-          </div>
-          </div>
+        <div class ="second_box">
+          <div class ="news_second">プレリリース</div>
+        </div>
+        <div class ="third_box">
+          <div class ="news_third">メディア掲載</div>
         </div>
       </div>
     </div>
+  </div>
+</div>
